scss/main.scss
/*! HTML5 Boilerplate v5.1.0 | MIT License | https://html5boilerplate.com/ */

/*
 * What follows is the result of much research on cross-browser styling.
 * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
 * Kroc Camen, and the H5BP dev community and team.
 */

/* ==========================================================================
   Base styles: opinionated defaults
   ========================================================================== */

@import "normalize";

html {
  box-sizing: border-box;
}
*, *:before, *:after {
  box-sizing: inherit;
}

html {
    font-size: 1em;
    line-height: 1.4;
}

/*
 * Remove text-shadow in selection highlight:
 * https://twitter.com/miketaylr/status/12228805301
 *
 * These selection rule sets have to be separate.
 * Customize the background color to match your design.
 */

::-moz-selection {
    background: #b3d4fc;
    text-shadow: none;
}

::selection {
    background: #b3d4fc;
    text-shadow: none;
}

/*
 * A better looking default horizontal rule
 */

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}

/*
 * Remove the gap between audio, canvas, iframes,
 * images, videos and the bottom of their containers:
 * https://github.com/h5bp/html5-boilerplate/issues/440
 */

audio,
canvas,
iframe,
img,
svg,
video {
    vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
    resize: vertical;
}

/* ==========================================================================
   Browser Upgrade Prompt
   ========================================================================== */

.browserupgrade {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}

/* ==========================================================================
   images
   ========================================================================== */

img {
    width:100%;
}





/* ==========================================================================
   Author's custom styles
   ========================================================================== */


$white: #eee;
$plum: #473355;
$grey: #444;
$black: #000;

body {
    font-family:'Oswald',gotham-book, sans-serif;
    background-color:$white;
    color:$white;
    scroll-snap-type: proximity;
}

h1{
    margin:0;
    line-height: 1;
    font-weight:400;
    text-transform: uppercase;
}
    .title{
        font-size:1.8em;
        width:100%;
        padding: 0.5em 1em;
        background-color:transparentize($black,0.1);
        position:fixed;
        z-index:1000;
        display:none;
        span{text-transform: none;}
    }

h2{
    margin:0;
    padding: 0;
}

a {
    text-decoration: none;
    color:white;
}
ul{padding:0;margin:0;}

.main-container{
    width:100%;
    max-width:1600px;
    margin:0 auto;
    scroll-snap-coordinate: 0px 0px;
}

.header-container{
    scroll-snap-coordinate: 0px 0px;
    height:95vh;
    background:transparent url(img/header.jpg) no-repeat;
        background-attachment:fixed;
        background-size:cover;
    img{
        width:100%;
        border-radius: 0;
    }
    li{
        font-size:1.5em;
        display:inline-block;
    }
    .cover{
        width:100%;
        height:100%;

    }
}

.about{
    font-family:'nimbus roman no9 L','Courier new bold', Georgia, 'times', serif;
    width:100%;
    height:100%;
    position:relative;
    padding:25% 0;
    letter-spacing:0.05em;

    .flexbox &{display:flex;
        flex-direction:column;
        justify-content:center;
    }

    p{
        margin:0 0 0.25em 0;
        font-size:1em;
    }

    h2,h3{
        margin:0 0 0.25em 0;
        font-weight:normal;
        font-size:2em;
    }

    .text-highlight{
        padding:0 5% 0 2.5%;
        background-color: transparentize($black, 0.5);
    }
    @media screen and (min-width: 600px) {
        font-size: 1.5em;
    }
    @media screen and (min-width: 1200px) {
        font-size:2em;
    }
}

section{
    color:$white;
    width:100%;
    float:left;
    position:relative;
    perspective:1000px;
    scroll-snap-coordinate:top;
    &:hover{
        cursor: pointer;
    }
    @media screen and (min-width: 600px) {
       width:50%;
    }
    @media screen and (min-width: 900px) {
       width:33.333333%;
       font-size:120%;
    }
    @media screen and (min-width: 1200px) {
       font-size:160%;
    }


    .descr {
        margin:0;
        transition:all 250ms ease-out;
        transform-origin:right bottom 0px;
        position:absolute;
        transform:rotateX(90deg);
        top:0;
        left:0;
        height:100%;
        width:100%;
        background-color: transparentize($black, 0.5);
        padding:2em 4em 2em 2em;
        opacity:0;
        //flex-browsers
        display: flex;
        flex-direction:column;
        justify-content:space-around;
        align-items:center;
        &.anim{
        transition:all 400ms ease-out;
        transform:rotateX(0deg);
            opacity:1;
        }
        a.btn{
                transition:all 250ms ease-out;
                background:$plum;
            &:hover{
                transition:all 250ms ease-out;
                background:$grey;
            }
        }
    }
    img{
            transform-origin:right top 0px;
            transition:transform 350ms ease-out;
    }
    img.anim{
            transform:matrix3d(0, 0, 1, 0, 0, 1, 0, 0, -1, 0, 0, 0, 0, 0, 0, 1);
        }
    .section-meta{
        transition:transform 200ms ease-out;
        background:transparentize($black, 0.6);
        position:absolute;
        padding:0.5em 1em 0.5em 0.5em;;
        top:33.33333%;
        left:0;
        height:33.33333%;
        display:flex;
        flex-direction:column;
        justify-content:center;
        text-align:left;
        transform-origin:left top 0px;
        &.anim{
            transform:matrix3d(0,0,-1,0,0,1,0,0,1,0,0,0,0,0,0,1);
        }
    }

    h2,h3 {
        line-height:1.2;
        margin:0;
        padding:0;
        font-weight:400;
        text-transform: uppercase;
    }

    h3{
        margin-top:0.25em;
        color:darken($white,10);
        font-weight: normal;
    }
}
.social-list{
    display:flex;
    flex-wrap: wrap;
    justify-content: space-between;
}
.social {
    list-style-type: none;
    margin-bottom:0.5em;
    .btn{
        font-size:0.875em;
        padding:0.5em;
    }
}


.footer-container{
    background-color:$grey;
    padding:2em 0;
    margin:0;
    scroll-snap-coordinate: 0 bottom;
    ul{
        display:flex;
        justify-content:space-around;
        .footer-social{
            display:inline-block;
            margin-right: 1em;
            a{
                color:$white;
                padding:0.5em 1em;
                display: block;
            }
            sup{
                font-size:1.5em;
                top:-.12em;
            }
        }
    }
}

a.btn{
    text-decoration: none;
    color:$white;
    border: 2px solid $white;
    padding:0.5em 1em;
    display:inline-block;
}























/* ==========================================================================
   Helper classes
   ========================================================================== */

/*
 * Hide visually and from screen readers:
 */

.hidden {
    display: none !important;
}

/*
 * Hide only visually, but have it available for screen readers:
 * http://snook.ca/archives/html_and_css/hiding-content-for-accessibility
 */

.visuallyhidden {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
}

/*
 * Extends the .visuallyhidden class to allow the element
 * to be focusable when navigated to via the keyboard:
 * https://www.drupal.org/node/897638
 */

.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
    clip: auto;
    height: auto;
    margin: 0;
    overflow: visible;
    position: static;
    width: auto;
}

/*
 * Hide visually and from screen readers, but maintain layout
 */

.invisible {
    visibility: hidden;
}

/*
 * Clearfix: contain floats
 *
 * For modern browsers
 * 1. The space content is one way to avoid an Opera bug when the
 *    `contenteditable` attribute is included anywhere else in the document.
 *    Otherwise it causes space to appear at the top and bottom of elements
 *    that receive the `clearfix` class.
 * 2. The use of `table` rather than `block` is only necessary if using
 *    `:before` to contain the top-margins of child elements.
 */

.clearfix:before,
.clearfix:after {
    content: " "; /* 1 */
    display: table; /* 2 */
}

.clearfix:after {
    clear: both;
}

/* ==========================================================================
   EXAMPLE Media Queries for Responsive Design.
   These examples override the primary ('mobile first') styles.
   Modify as content requires.
   ========================================================================== */

@media only screen and (min-width: 35em) {
    /* Style adjustments for viewports that meet the condition */
}

@media print,
       (-webkit-min-device-pixel-ratio: 1.25),
       (min-resolution: 120dpi) {
    /* Style adjustments for high resolution devices */
}

/* ==========================================================================
   Print styles.
   Inlined to avoid the additional HTTP request:
   http://www.phpied.com/delay-loading-your-print-css/
   ========================================================================== */

@media print {
    *,
    *:before,
    *:after {
        background: transparent !important;
        color: #000 !important; /* Black prints faster:
                                   http://www.sanbeiji.com/archives/953 */
        box-shadow: none !important;
        text-shadow: none !important;
    }

    a,
    a:visited {
        text-decoration: underline;
    }

    a[href]:after {
        content: " (" attr(href) ")";
    }

    abbr[title]:after {
        content: " (" attr(title) ")";
    }

    /*
     * Don't show links that are fragment identifiers,
     * or use the `javascript:` pseudo protocol
     */

    a[href^="#"]:after,
    a[href^="javascript:"]:after {
        content: "";
    }

    pre,
    blockquote {
        border: 1px solid #999;
        page-break-inside: avoid;
    }

    /*
     * Printing Tables:
     * http://css-discuss.incutio.com/wiki/Printing_Tables
     */

    thead {
        display: table-header-group;
    }

    tr,
    img {
        page-break-inside: avoid;
    }

    img {
        max-width: 100% !important;
    }

    p,
    h2,
    h3 {
        orphans: 3;
        widows: 3;
    }

    h2,
    h3 {
        page-break-after: avoid;
    }
}

